# hyperspy_sample_extension_src_layout

./: README.md  README.rst  pyproject.toml
src/hspy_ext_src_layout/: component.py  hyperspy_extension.yaml  model.py  signal.py
tests/: test_import.py
